Strengthen exported launcher evidence contract
Generate explicit AliceJavaFXLauncher evidence markers for JavaFX handoff, Application.start entry, stage receipt, minimal scene setup, and Program.main delegation without claiming rendering. Add deterministic no-go markers for null stages and known JavaFX display-unavailable launch failures.

Add source-shape and standalone exported-project characterization coverage for the previous proof boundary, the stronger scene/setup boundary, JavaFX stub behavior, null-stage no-go, real JavaFX headless/display handling, and optional Xvfb-backed evidence.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>